--- a/scss/Layout/Pages/Portfolio/Items/_Harmony.scss
+++ b/scss/Layout/Pages/Portfolio/Items/_Harmony.scss
@@ -1,8 +1,4 @@
 .harmony {
-    --theme-color: 204, 88, 66;
-    --theme-background: url("https://web.archive.org/web/20220226213305im_/http://jessdesigntan.com/images/card-fitness.jpg");
-    --theme-logo: url("https://web.archive.org/web/20220226212236im_/http://jessdesigntan.com/images/fitness-logo.png");
-    --theme-description: "Harmony Description";
-
-    --logo-color: var(--theme-color);
+    --theme-color: 74, 67, 181;
+    --theme-background: url("/dist/tempimg/card-harmony.png");
 }
