--- a/scss/Utilities/_Utilities.scss
+++ b/scss/Utilities/_Utilities.scss
@@ -30,3 +30,16 @@ ul {
         }
     }
 }
+
+
+.text--center {
+    text-align: center;
+}
+
+body {
+    min-height: calc(100vh - (50px * 2));
+}
+
+main {
+    flex-grow: 1;
+}
