Refactor & add Pinewood

--- a/scss/Components/Card/Portfolio/_PortfolioCard.scss
+++ b/scss/Components/Card/Portfolio/_PortfolioCard.scss
@@ -24,7 +24,7 @@
 
     &__action {
         position: absolute;
-        background: url("../dist/arrow-btn.svg") center center no-repeat;
+        background: url("/assets/arrow.svg") center center no-repeat;
         background-size: 15px;
         width: 40px;
         height: 40px;
