--- a/scss/Layout/_Layout.scss
+++ b/scss/Layout/_Layout.scss
@@ -46,6 +46,20 @@
     &--small {
         gap: var(--spacing--small);
     }
+
+    &--nogap {
+        gap: 0;
+    }
+
+    &--portfolio {
+        max-width: var(--max-width);
+        padding: 50px;
+        font-family: var(--font-family--normal);
+        margin: auto;
+        @include mobileSize((
+            padding: 24px
+        ));
+    }
 }
 
 @import "Navigation/Navigation";
@@ -54,5 +68,3 @@
 
 @import "Section/Section";
 @import "Content/Content";
-
-@import "Pages/Pages";
