--- a/scss/Utilities/Fonts/_Fonts.scss
+++ b/scss/Utilities/Fonts/_Fonts.scss
@@ -1,22 +1,24 @@
 @font-face {
     font-family: 'brandon_grotesqueblack';
-    src: url('../dist/brandon-grotesque-black.woff2') format('woff2')
-    // font-weight: 100;
-    // font-style: normal;
+    src: url('/assets/fonts/brandon-grotesque-black.woff2') format('woff2');
+    font-display: swap;
 }
 
 @font-face {
     font-family: 'Lato Bold';
-    src: url('../dist/Lato-Bold.ttf') format("truetype")
+    src: url('/assets/fonts/Lato-Bold.ttf') format("truetype");
+    font-display: swap;
   }
 
 @font-face {
     font-family: 'Lato Light';
-    src: url('../dist/Lato-Light.ttf') format("truetype")
+    src: url('/assets/fonts/Lato-Light.ttf') format("truetype");
+    font-display: swap;
   }
   
   @font-face {
     font-family: 'Lato';
-    src: url('../dist/Lato-Regular.ttf') format("truetype")
+    src: url('/assets/fonts/Lato-Regular.ttf') format("truetype");
+    font-display: swap;
   }
   
