--- a/UI/Components/Navigation/_Navigation.scss
+++ b/UI/Components/Navigation/_Navigation.scss
@@ -25,4 +25,25 @@
             opacity: 1;
         }
     }
+
+    &__back {
+        background: url("/assets/arrow.svg") center center no-repeat;
+        background-size: 15px;
+        width: 25px;
+        height: 25px;
+        background-color: rgba(var(--theme-color));
+        transform: rotate(180deg);
+        border-radius: 100%;
+        box-shadow: var(--shadow--medium);
+        margin-top: -3px;
+        margin-right: -10px;
+        opacity: 0.6;
+        transition: all 0.5s ease-in-out;
+
+        &--hidden {
+            opacity: 0;
+            margin-right: calc(var(--spacing--medium) * -1);
+            margin-left: -25px;
+        }
+    }
 }
