--- a/UI/Components/_Components.scss
+++ b/UI/Components/_Components.scss
@@ -1,5 +1,7 @@
 @import "Logo/Logo";
+@import "Navigation/Navigation";
 @import "Intro/Intro";
+@import "Footer/Footer";
 @import "Seperator/Seperator";
 @import "Card/Card";
 @import "SocialLink/SocialLink";
