Update CV, prevent back navigation and update a couple of styles

--- a/UI/Components/Card/Portfolio/_PortfolioCard.scss
+++ b/UI/Components/Card/Portfolio/_PortfolioCard.scss
@@ -7,6 +7,7 @@
     transition: transform 0.3s ease;
     background: var(--theme-background) bottom center no-repeat;
     background-size: auto var(--portfolio-card-size);
+    cursor: pointer;
 
     &__chip {
         position: absolute;
