--- a/UI/Components/Footer/_Footer.scss
+++ b/UI/Components/Footer/_Footer.scss
@@ -31,6 +31,12 @@
         justify-content: center;
     }
 
+    &__version {
+        font-size: var(--font-extraSmall);
+        color: #ccc;
+        margin-top: 6px;
+    }
+
     // Overrides
 
     & .seperator {
