Init slideshow and add CV assets

--- a/UI/Components/Navigation/_Navigation.html
+++ b/UI/Components/Navigation/_Navigation.html
@@ -3,5 +3,5 @@
         <div class="navigation__back" data-bind="css: { 'navigation__back--hidden': !hasSelectedContent() }"></div>
         <div class="logo"></div>
     </div>
-    <a class="navigation__action" href="/assets/KieranNoble-CV-Aug22.pdf" target="_blank">CV</a>
+    <a class="navigation__action" data-bind="click: showCV">CV</a>
 </nav>
