--- a/UI/Components/_Components.scss
+++ b/UI/Components/_Components.scss
@@ -4,4 +4,5 @@
 @import "Footer/Footer";
 @import "Seperator/Seperator";
 @import "Card/Card";
+@import "Slideshow/Slideshow";
 @import "SocialLink/SocialLink";
