--- a/UI/Components/Navigation/_Navigation.scss
+++ b/UI/Components/Navigation/_Navigation.scss
@@ -16,6 +16,7 @@
         opacity: 0.65;
         transition: opacity 0.25s ease, color 0.5s ease-in-out;
         margin-top: auto;
+        cursor: pointer;
 
         @include mobileSize((
             margin-bottom: auto
