Update image handling - add content to harmony

--- a/UI/Components/_Components.scss
+++ b/UI/Components/_Components.scss
@@ -4,5 +4,6 @@
 @import "Footer/Footer";
 @import "Seperator/Seperator";
 @import "Card/Card";
+@import "Image/Image";
 @import "Slideshow/Slideshow";
 @import "SocialLink/SocialLink";
