--- a/UI/Themes/_Themes.scss
+++ b/UI/Themes/_Themes.scss
@@ -20,9 +20,13 @@
     --spacing--medium: 24px;
     --spacing--small: 12px;
 
+    --slideshow-spacing: 16px;
+
     --rounded--extraLarge: 30px;
     --rounded--large: 7px;
     --rounded--medium: 5px;
+
+    --action-icon-size: 15px;
 
     // Constants
 
