--- a/UI/Components/Card/Portfolio/_PortfolioCard.scss
+++ b/UI/Components/Card/Portfolio/_PortfolioCard.scss
@@ -26,7 +26,7 @@
     &__action {
         position: absolute;
         background: url("/assets/arrow.svg") center center no-repeat;
-        background-size: 15px;
+        background-size: var(--action-icon-size);
         width: 40px;
         height: 40px;
         background-color: rgba(var(--theme-color));
