--- a/UI/Pages/_Pages.scss
+++ b/UI/Pages/_Pages.scss
@@ -1,3 +1,3 @@
 @import "Items/Home";
-@import "Items/Harmony";
-@import "Items/Pinewood";
+@import "Items/Harmony/Harmony";
+@import "Items/Pinewood/Pinewood";
