--- a/UI/Components/Intro/_Intro.html
+++ b/UI/Components/Intro/_Intro.html
@@ -1,6 +1,6 @@
 <header class="intro">
     <img class="intro__avatar" src="https://aylo.net/static/portfolio/kieran.webp" height="150"
-        alt="A photo of Kieran Noble">
+        alt="A photo of Kieran Noble" loading="lazy">
     <div class="intro__text-container">
         <div class="intro__name">Howdy, I'm Kieran</div>
         <div class="intro__title">Full Stack Developer</div>
