--- a/UI/Pages/Items/Harmony/_Harmony.scss
+++ b/UI/Pages/Items/Harmony/_Harmony.scss
@@ -1,4 +1,7 @@
 .harmony {
     --theme-color: 74, 67, 181;
     --theme-background: url("/assets/projects/harmony/card.webp");
+    --theme-logo: url("/assets/projects/harmony/logo.svg");
+    --theme-tagline: "An E-Commerce platform for a modern music store";
+    --theme-category: "Backend";
 }
