--- a/UI/Components/Slideshow/_Slideshow.html
+++ b/UI/Components/Slideshow/_Slideshow.html
@@ -1,19 +1,16 @@
-<!-- ko if: showSlideshow-->
-<div class="slideshow slideshow--shown">
+<div class="slideshow" data-bind="css: { 'slideshow--shown': visible() }, attr: { id: id }">
 
     <div class="slideshow__image" data-bind="css: { 'slideshow__image--full': !showThumbnails() }">
-        <img data-bind="attr:{src: selectedImage}">
+        <img data-bind="attr:{ src: selectedImage() }" loading="lazy">
     </div>
 
-    <!-- ko if: showThumbnails -->
-    <div class="slideshow__thumbnails-holder">
+    <div class="slideshow__thumbnails-holder" data-bind="if: showThumbnails">
         <div class="slideshow__thumbnails" data-bind="foreach: slideshowImages">
-            <div class="slideshow__thumbnail" data-bind="click: selectImage.bind($data, $index())">
-                <img data-bind="attr: {src: $data}" width="120" height="60" loading="lazy">
+            <div class="slideshow__thumbnail">
+                <img data-bind="attr: { src: $data, 'data-index': $index() }" width="120" height="60" loading="lazy">
             </div>
         </div>
     </div>
-    <!-- /ko -->
 
     <div class="slideshow__button slideshow__button--close" data-bind="click: close"></div>
     <!-- ko if: showPrevious -->
@@ -27,4 +24,3 @@
     <!-- /ko -->
 
 </div>
-<!-- /ko -->
