--- a/UI/Components/Slideshow/_Slideshow.scss
+++ b/UI/Components/Slideshow/_Slideshow.scss
@@ -5,6 +5,7 @@
     left: 0;
     right: 0;
     display: none;
+    z-index: 10;
     background-color: rgba(51, 51, 51, 0.85);
 
     --theme-color: 185, 185, 185;
