--- a/UI/Utilities/_Utilities.scss
+++ b/UI/Utilities/_Utilities.scss
@@ -31,7 +31,6 @@ ul {
     }
 }
 
-
 .text--center {
     text-align: center;
 }
@@ -56,6 +55,10 @@ html {
 
 .no-shadow {
     box-shadow: none;
+}
+
+.hidden {
+    display: none;
 }
 
 strong {
