Update packages, fix slideshow image fill & preload CV

--- a/UI/Components/Slideshow/_Slideshow.scss
+++ b/UI/Components/Slideshow/_Slideshow.scss
@@ -60,9 +60,11 @@
         align-items: center;
 
         & img {
+            --max-image-fill: 90%;
+            
             width: auto;
-            max-width: 100%;
-            max-height: 100%;
+            max-width: var(--max-image-fill);
+            max-height: var(--max-image-fill);
         }
 
         &--full {
