--- a/UI/Components/Slideshow/_Slideshow.html
+++ b/UI/Components/Slideshow/_Slideshow.html
@@ -20,7 +20,7 @@
     <div class="slideshow__button slideshow__button--next" data-bind="click: next"></div>
     <!-- /ko -->
     <!-- ko if: showDownload -->
-    <a class="slideshow__button slideshow__button--download" data-bind="attr: {href: downloadUrl}"></a>
+    <a class="slideshow__button slideshow__button--download" data-bind="attr: {href: downloadUrl}" download></a>
     <!-- /ko -->
 
 </div>
