--- a/UI/Components/Footer/_Footer.html
+++ b/UI/Components/Footer/_Footer.html
@@ -9,16 +9,16 @@
     <div class="footer__contact-note">Feel free to drop me an email, I'd ❤️ to hear from you!</div>
     <div class="footer__socialLinks">
         <a href="https://www.linkedin.com/in/kierannoble/" class="socialLink">
-            <img class="socialLink__image" src="/assets/social/linkedin.svg" alt="LinkedIn" loading="lazy">
+            <img class="socialLink__image" src="/assets/social/linkedin.svg" alt="LinkedIn" loading="lazy" decoding="async">
         </a>
         <a href="https://twitter.com/aylokieran" class="socialLink">
-            <img class="socialLink__image" src="/assets/social/twitter.svg" alt="Twitter" loading="lazy">
+            <img class="socialLink__image" src="/assets/social/twitter.svg" alt="Twitter" loading="lazy" decoding="async">
         </a>
         <a href="https://t.me/aylokieran" class="socialLink">
-            <img class="socialLink__image" src="/assets/social/telegram.svg" alt="Telegram" loading="lazy">
+            <img class="socialLink__image" src="/assets/social/telegram.svg" alt="Telegram" loading="lazy" decoding="async">
         </a>
         <a href="mailto:howdy@kierannoble.dev" class="socialLink">
-            <img class="socialLink__image" src="/assets/social/email.svg" alt="Email" loading="lazy">
+            <img class="socialLink__image" src="/assets/social/email.svg" alt="Email" loading="lazy" decoding="async">
         </a>
     </div>
     <div class="footer__version" data-bind="text: version">
