--- a/UI/Components/Navigation/_Navigation.scss
+++ b/UI/Components/Navigation/_Navigation.scss
@@ -48,6 +48,7 @@
             margin-right: calc(var(--spacing--medium) * -1);
             margin-left: -25px;
             user-select: none;
+            pointer-events: none;
         }
 
         &:hover {
