Project context and basic server and lazy loading

--- a/src/UI/Components/Footer/_Footer.scss
+++ b/src/UI/Components/Footer/_Footer.scss
@@ -35,6 +35,7 @@
         font-size: var(--font-extraSmall);
         color: #ccc;
         margin-top: 6px;
+        margin-bottom: 36px;
     }
 
     // Overrides
