--- a/src/UI/Layout/Container/_Container.scss
+++ b/src/UI/Layout/Container/_Container.scss
@@ -1,8 +1,11 @@
 .container {
     min-height: 100vh;
+    max-height: 100vh;
     scroll-behavior: smooth;
     display: flex;
     justify-content: center;
+    overflow-y: auto;
+    overflow-x: hidden;
 
     & > .layout {
         flex-grow: 1;
