Harmony page with initial slideshow implementation

--- a/src/UI/Components/Image/_Image.scss
+++ b/src/UI/Components/Image/_Image.scss
@@ -16,7 +16,7 @@
         right: 16px;
         border-radius: 100%;
         box-shadow: var(--shadow--medium);
-        transition: all 0.5s ease-in-out;
+        // transition: all 0.5s ease-in-out;
         cursor: pointer;
 
         &-text {
