--- a/src/UI/Components/_Components.scss
+++ b/src/UI/Components/_Components.scss
@@ -1,10 +1,11 @@
+@import "Card/Card";
+@import "Error/Error";
+@import "Footer/Footer";
+@import "Intro/Intro";
+@import "Image/Image";
 @import "Logo/Logo";
 @import "Navigation/Navigation";
-@import "Intro/Intro";
-@import "Footer/Footer";
 @import "Seperator/Seperator";
-@import "Card/Card";
-@import "Image/Image";
 @import "Slideshow/Slideshow";
 @import "SocialLink/SocialLink";
 @import "Video/Video";
