--- a/src/UI/Pages/Items/Harmony/_Harmony.scss
+++ b/src/UI/Pages/Items/Harmony/_Harmony.scss
@@ -2,6 +2,6 @@
     --theme-color: 74, 67, 181;
     --theme-background: url("@/projects/harmony/card.webp");
     --theme-logo: url("@/projects/harmony/logo.svg");
-    --theme-tagline: "An E-Commerce platform for a modern music store";
+    --theme-tagline: "E-Commerce for a modern music store";
     --theme-category: "Backend";
 }
