--- a/src/UI/Themes/_Themes.scss
+++ b/src/UI/Themes/_Themes.scss
@@ -28,6 +28,14 @@
 
     --action-icon-size: 15px;
 
+    // Colors
+
+    --color--primary: 0, 150, 136;
+    --color--success: 46, 125, 50;
+    --color--danger: 220, 48, 48;
+    --color--warning: 255, 193, 7;
+    --color--info: 27, 131, 165;
+
     // Constants
 
     --font-family--block: "brandon_grotesqueblack";
