--- a/src/UI/Components/SocialLink/_SocialLink.scss
+++ b/src/UI/Components/SocialLink/_SocialLink.scss
@@ -1,14 +1,14 @@
 .socialLink {
-    margin: 0 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(var(--socialLink--colour), 0.7);
+    color: white;
 
-    &__image {
-        width: 40px;
-        height: 40px;
-        opacity: 0.8;
-        transition: all .25s;
-
-        &:hover {
-            opacity: 1;
-        }
+    &:hover {
+        background-color: rgba(var(--socialLink--colour), 1);
     }
 }
