--- a/src/UI/Components/_Components.scss
+++ b/src/UI/Components/_Components.scss
@@ -5,6 +5,7 @@
 @import "Image/Image";
 @import "Logo/Logo";
 @import "Navigation/Navigation";
+@import "Notification/Notification";
 @import "Redirection/Redirection";
 @import "Seperator/Seperator";
 @import "Slideshow/Slideshow";
