--- a/src/UI/Components/Footer/_Footer.scss
+++ b/src/UI/Components/Footer/_Footer.scss
@@ -22,6 +22,7 @@
             letter-spacing: 0.5px;
             opacity: 0.5;
             font-style: italic;
+            margin-bottom: 6px;
             margin-bottom: 12px;
         }
     }
