Update Photi Assets, Update CV and Update Packages

--- a/src/UI/Pages/Items/Photi/_Photi.scss
+++ b/src/UI/Pages/Items/Photi/_Photi.scss
@@ -1,7 +1,8 @@
 .photi {
     --theme-color: 0, 139, 139;
     --theme-background: url("@/projects/photi/card.webp");
-    --theme-logo: url("@/projects/photi/logo.webp");
+    --theme-logo: url("@/projects/photi/logo.svg");
     --theme-tagline: "AI Driven Social Media Application";
     --theme-category: "Dissertation";
+    --logo-size: 300px;
 }
