--- a/src/UI/Utilities/Fonts/_Fonts.scss
+++ b/src/UI/Utilities/Fonts/_Fonts.scss
@@ -1,24 +1,24 @@
 @font-face {
     font-family: 'brandon_grotesqueblack';
-    src: url('@/fonts/brandon-grotesque-black.woff2') format('woff2');
+    src: url('/fonts/brandon-grotesque-black.woff2') format('woff2');
     font-display: block;
 }
 
 @font-face {
     font-family: 'Lato Bold';
-    src: url('@/fonts/Lato-Bold.ttf') format("truetype");
+    src: url('/fonts/Lato-Bold.ttf') format("truetype");
     font-display: block;
   }
 
 @font-face {
     font-family: 'Lato Light';
-    src: url('@/fonts/Lato-Light.ttf') format("truetype");
+    src: url('/fonts/Lato-Light.ttf') format("truetype");
     font-display: block;
   }
   
   @font-face {
     font-family: 'Lato';
-    src: url('@/fonts/Lato-Regular.ttf') format("truetype");
+    src: url('/fonts/Lato-Regular.ttf') format("truetype");
     font-display: block;
   }
   
