--- a/src/UI/Pages/Items/Harmony/_Harmony.scss
+++ b/src/UI/Pages/Items/Harmony/_Harmony.scss
@@ -1,7 +1,7 @@
 .harmony {
-    --theme-color: 74, 67, 181;
-    --theme-background: url("@/projects/harmony/card.webp");
-    --theme-logo: url("@/projects/harmony/logo.svg");
-    --theme-tagline: "E-Commerce for a modern music store";
-    --theme-category: "Backend";
+  --theme-color: 74, 67, 181;
+  --theme-background: url("@/assets/projects/harmony/card.webp");
+  --theme-logo: url("@/assets/projects/harmony/logo.svg");
+  --theme-tagline: "E-Commerce for a modern music store";
+  --theme-category: "Backend";
 }
