--- a/src/UI/Pages/_Pages.scss
+++ b/src/UI/Pages/_Pages.scss
@@ -1,6 +1,6 @@
-@import "Items/Home";
-@import "Items/Photi/Photi";
-@import "Items/Harmony/Harmony";
-@import "Items/Pinewood/Pinewood";
-@import "Items/ExperimentalImagery/ExperimentalImagery";
-@import "Items/PartsAndSections/PartsAndSections";
+@use "Items/Home";
+@use "Items/Photi/Photi";
+@use "Items/Harmony/Harmony";
+@use "Items/Pinewood/Pinewood";
+@use "Items/ExperimentalImagery/ExperimentalImagery";
+@use "Items/PartsAndSections/PartsAndSections";
