--- a/src/UI/Themes/_Themes.scss
+++ b/src/UI/Themes/_Themes.scss
@@ -38,7 +38,7 @@
 
     // Constants
 
-    --font-family--block: "brandon_grotesqueblack";
+    --font-family--block: "HalisR";
     --font-family--normal: "Lato";
     --font-family--light: "Lato Light";
     --font-family--bold: "Lato Bold";
