--- a/src/UI/Utilities/Fonts/_Fonts.scss
+++ b/src/UI/Utilities/Fonts/_Fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'brandon_grotesqueblack';
-    src: url('/fonts/brandon-grotesque-black.woff2') format('woff2');
+    font-family: 'HalisR';
+    src: url('/fonts/HalisR-Black.otf') format('opentype');
     font-display: block;
 }
 
