--- a/src/UI/Utilities/_Utilities.scss
+++ b/src/UI/Utilities/_Utilities.scss
@@ -1,5 +1,5 @@
-@import "ThirdParty/ThirdParty";
-@import "Fonts/Fonts";
+@use "ThirdParty/ThirdParty";
+@use "Fonts/Fonts";
 
 a {
     text-decoration: none;
