--- a/src/UI/Components/Slideshow/_Slideshow.scss
+++ b/src/UI/Components/Slideshow/_Slideshow.scss
@@ -1,3 +1,6 @@
+@use "sass:color";
+@use "../../Mixins";
+
 .slideshow {
     position: fixed;
     top: 0;
@@ -48,7 +51,7 @@
         }
 
         &:hover {
-            background-color: darken(#333, 10%);
+            background-color: color.adjust(#333, $lightness: -10%);
         }
     }
 
@@ -104,7 +107,7 @@
             &-holder {
                 --spacing: 0px;
 
-                @include mobileSize((
+                @include Mixins.mobileSize((
                     --spacing: var(--slideshow-spacing)
                 ));
 
