--- a/src/UI/Components/_Components.scss
+++ b/src/UI/Components/_Components.scss
@@ -1,14 +1,14 @@
-@import "Card/Card";
-@import "Error/Error";
-@import "Footer/Footer";
-@import "Frame/Frame";
-@import "Intro/Intro";
-@import "Image/Image";
-@import "Logo/Logo";
-@import "Navigation/Navigation";
-@import "Notification/Notification";
-@import "Redirection/Redirection";
-@import "Seperator/Seperator";
-@import "Slideshow/Slideshow";
-@import "SocialLink/SocialLink";
-@import "Video/Video";
+@use "Card/Card";
+@use "Error/Error";
+@use "Footer/Footer";
+@use "Frame/Frame";
+@use "Intro/Intro";
+@use "Image/Image";
+@use "Logo/Logo";
+@use "Navigation/Navigation";
+@use "Notification/Notification";
+@use "Redirection/Redirection";
+@use "Seperator/Seperator";
+@use "Slideshow/Slideshow";
+@use "SocialLink/SocialLink";
+@use "Video/Video";
