--- a/src/UI/main.scss
+++ b/src/UI/main.scss
@@ -1,5 +1,5 @@
-@import "Themes/Themes";
-@import "Layout/Layout";
-@import "Components/Components";
-@import "Utilities/Utilities";
-@import "Pages/Pages";
+@use "Themes/Themes";
+@use "Layout/Layout";
+@use "Components/Components";
+@use "Utilities/Utilities";
+@use "Pages/Pages";
